# django_poetry_demo

./: .gitignore  db.sqlite3  pyproject.toml  requirements.txt
django_basic/: asgi.py  settings.py  urls.py  wsgi.py
pages/: tests.py  urls.py  views.py
templates/: about.html  base.html  home.html
