[tool.poetry]
name = "django-poetry-demo"
version = "0.1.0"
description = "a demo for django  project using poetry"
authors = ["tvviem <trieuvinhviem@gmail.com>"]
readme = "README.md"
packages = [{include = "django_poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "4.0.1"
gunicorn = "20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
